[project]
name = "multithreading-python"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "E203",
  "E266",
  "E501",
  "D",
  "T201",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"